[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI Pages/StatsPage/Stats.gd" type="Script" id=2]
[ext_resource path="res://Assets/Buttons/BackButtonShortPressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/BackButtonShort.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Art/Right Button.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Left Button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Disabled Left or Right Button.png" type="Texture" id=8]
[ext_resource path="res://addons/example_ChartGraph/line_chart_static.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/Art/Table.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 10 )

[node name="StatsPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.776471, 0.886275, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1137.0
color = Color( 0.568627, 0.74902, 0.870588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -349.0
margin_top = 27.0
margin_right = 349.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Statistics"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -83.4287
margin_right = 61.0
margin_bottom = -31.4287
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
margin_left = 60.0
margin_top = 157.0
margin_right = 660.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 483.073, 601.917 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Memory Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -423.698
margin_right = 300.0
margin_bottom = -23.6982
color = Color( 0.592157, 0.807843, 0.819608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemoryChart" parent="." instance=ExtResource( 9 )]
margin_left = -403.958
margin_top = -416.752
margin_right = 351.042
margin_bottom = -29.7522

[node name="Pages" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -1.00256
margin_right = 300.0
margin_bottom = 99.9974
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="Pages"]
margin_right = 200.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="CurrentPage" type="Label" parent="Pages"]
margin_left = 204.0
margin_right = 396.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1/4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="Pages"]
margin_left = 400.0
margin_right = 600.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 8 )

[node name="TableBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.481
margin_top = 186.227
margin_right = 301.519
margin_bottom = 351.227
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.5
margin_top = 188.685
margin_right = 308.5
margin_bottom = 423.685
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="VBoxContainer" parent="Table"]
margin_right = 156.0
margin_bottom = 165.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="Label" parent="Table/Empty"]
margin_right = 156.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Memory" type="Label" parent="Table/Empty"]
margin_top = 33.0
margin_right = 156.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Memory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reaction" type="Label" parent="Table/Empty"]
margin_top = 66.0
margin_right = 156.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reaction"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Observation" type="Label" parent="Table/Empty"]
margin_top = 99.0
margin_right = 156.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Observation"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Judegement" type="Label" parent="Table/Empty"]
margin_top = 132.0
margin_right = 156.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Judegement"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Average Score" type="VBoxContainer" parent="Table"]
margin_left = 206.0
margin_right = 380.0
margin_bottom = 165.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Average Score" type="Label" parent="Table/Average Score"]
margin_right = 174.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Average Score"
align = 1
valign = 1

[node name="Memory Average" type="Label" parent="Table/Average Score"]
margin_top = 33.0
margin_right = 174.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="React Average" type="Label" parent="Table/Average Score"]
margin_top = 66.0
margin_right = 174.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Observation Average" type="Label" parent="Table/Average Score"]
margin_top = 99.0
margin_right = 174.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Judegement Average" type="Label" parent="Table/Average Score"]
margin_top = 132.0
margin_right = 174.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Global Average" type="VBoxContainer" parent="Table"]
margin_left = 430.0
margin_right = 608.0
margin_bottom = 165.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Global Average" type="Label" parent="Table/Global Average"]
margin_right = 178.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Global Average"
align = 1
valign = 1

[node name="Memory Global" type="Label" parent="Table/Global Average"]
margin_top = 33.0
margin_right = 178.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="React Global" type="Label" parent="Table/Global Average"]
margin_top = 66.0
margin_right = 178.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Observation Global" type="Label" parent="Table/Global Average"]
margin_top = 99.0
margin_right = 178.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Judegement Global" type="Label" parent="Table/Global Average"]
margin_top = 132.0
margin_right = 178.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Pages/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Pages/Right" to="." method="_on_Right_pressed"]
